package Chapter_1_Strategy.duck;

public class DecoyDuck extends Duck {
    @Override
    void display() {
        System.out.println("quack - quack :)");
    }
}
