package Chapter_1_Strategy.duck;

public class RedheadDuck extends Duck{
    @Override
    void display() {
        System.out.println("I'am a read head duck");
    }
}
