package Chapter_1_Strategy.duck;

public class RubberDuck extends Duck {
    @Override
    void display() {
        System.out.println("A piece of rubber");
    }
}
