package Chapter_1_Strategy.fly;

public class FlyNoWay implements FlyBehavior{

    @Override
    public void fly() {
        System.out.println("I can't fly");
        //empty
    }
}
