package Chapter_1_Strategy.quack;

public interface QuackBehavior {
    void quack();
}
